Fix mobile overflow plus h1 spacing

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -34,6 +34,8 @@
 h1 {
   font-family: 'Poppins', 'Roboto', sans-serif;
   font-size: 3.75rem;
+  margin-bottom: 1rem;
+  line-height: 1.25;
 }
 h2 {
   font-family: 'Poppins', 'Roboto', sans-serif;
